[project]
name = "pubmed-researchpaper-fetcher"
version = "0.1.0"
description = "Fetch and filter PubMed research papers with non-academic/company authors."
authors = [
    { name = "tanneruesther", email = "tanneruesther@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
  { include = "get_papers" }
]

[tool.poetry.group.dev.dependencies]
mypy = "^1.16.1"
pandas-stubs = "^2.3.0.250703"
